--- a/pipelines.yml
+++ b/pipelines.yml
@@ -6,34 +6,49 @@ resources:
       path: jprinet/jfrog-pipelines-sample
       branches:
         include: feature/*
+  - name: myBuildInfo
+    type: BuildInfo
+    configuration:
+      sourceArtifactory:    artifactory_jerome
+      buildName:            pipelines-gradle-sample
+      buildNumber:          1
+      externalCI:           jenkinsIntegration
 
 pipelines:
   - name: sample_pipelines_feature
 
     steps:
-    - name: step_1
-      type: Bash
+    - name: build
+      type: GradleBuild
       configuration:
+        environmentVariables:
+          GRADLE_OPTS: -Dorg.gradle.daemon=false
+        gradleCommand: jfrog rt gradle build artifactoryPublish --build-name=pipelines-gradle-sample --build-number=1
+        sourceLocation: .
+        configFileLocation: .jfrog/projects
+        configFileName: gradle.yaml
+        autoPublishBuildInfo: true
         inputResources:
           - name: sample_resource_feature
+        outputResources:
+          - name: myBuildInfo
+        integrations:
+          - name: artifactory_jerome
       execution:
-        onExecute:
-          - echo "Hello World!"
+        onStart:
+          - echo "Preparing for work..."
+        onSuccess:
+          - echo "Job well done!"
+        onFailure:
+          - echo "uh oh, something went wrong"
+        onComplete:
+          - echo "Cleaning up some stuff"
 
-    - name: step_2
+    - name: cleanup
       type: Bash
       configuration:
         inputSteps:
-          - name: step_1
+          - name: build
       execution:
         onExecute:
-          - echo "Goodbye World!"  
-
-    - name: step_3
-      type: Bash
-      configuration:
-        inputSteps:
-          - name: step_1
-      execution:
-        onExecute:
-          - echo "Goodbye Parallel World!"  
+          - echo "Goodbye World!"
