--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ targetCompatibility = 1.8
 
 dependencies {
     compile "joda-time:joda-time:2.2"
+    compile group: 'org.apache.struts', name: 'struts2-core', version: '2.3.28'
 }
