update branch name

--- a/pipelines/pipelines-resources.yml
+++ b/pipelines/pipelines-resources.yml
@@ -5,8 +5,7 @@ resources:
       gitProvider: jerome_github
       path: jprinet-jfrog/jfrog-pipelines-sample
       branches:
-        include: feature/complete_pipeline
-
+        include: master
   - name: jerome_build_info_gradle
     type: BuildInfo
     configuration:
